# ecr-mirror

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.cfg
ecr_mirror/: __init__.py  __main__.py
