[tool.poetry]
name = "ecr_mirror"
version = "1.0.2"
license = "MIT"
description = "Mirror public Docker images to private ECR repositories"
authors = ["Tom Forbes <tom.forbes@onfido.com>"]
readme = "README.md"
keywords = ["docker", "ecr", "mirror"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
boto3 = "*"
boto3-stubs = { extras = ["ecr"], version = "*" }

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
pytest-black = "*"
black = "^19.10b0"
pytest-pythonpath = "*"
pytest-mock = "*"
pytest-randomly = "*"
pytest-xdist = "*"
pytest-watch = "*"
taskipy = "*"
bumpversion = "*"

[tool.poetry.scripts]
ecr-mirror = "ecr_mirror:cli"
