[tool.poetry]
name = "ecr_mirror"
version = "1.1.0"
license = "MIT"
description = "Mirror public Docker images to private ECR repositories"
authors = ["Tom Forbes <tom.forbes@onfido.com>"]
readme = "README.md"
keywords = ["docker", "ecr", "mirror"]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
boto3 = "*"
boto3-stubs = { extras = ["ecr"], version = "*" }

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
pytest-black = "*"
black = "*"
pytest-pythonpath = "*"
pytest-mock = "*"
pytest-randomly = "*"
pytest-xdist = "*"
pytest-watch = "*"
taskipy = "*"
bumpversion = "*"

[tool.poetry.scripts]
ecr-mirror = "ecr_mirror:cli"
